[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "cuKDTree"
version = "1.0.0"
authors = [{name = "Jamie Donnelly", email = "jamie.donnelly@physicsx.ai"}]
requires-python = ">=3.10, <3.13"
description = ""
dependencies = [
    "numpy<1.26.0,>=1.24.0",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "isort",
    "pytest~=7.2",
    "ruff"
]

[tool.setuptools.packages.find]
include = [
    "cuKDTree"
]

[tool.setuptools.package-data]
cuKDTree = ["*.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    "*.cpp",
    "*.hpp",
    "3rd_party/*",
    "build/*"
]

[tool.isort]
skip = [
    "3rd_party",
    "build"
]
skip_glob = [
    "**/__pycache__/*"
]
