[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.18",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "gKDTree"
version = "1.0.0"
authors = [{name = "Jamie Donnelly", email = "jamie.donnelly@physicsx.ai"}]
requires-python = ">=3.10, <3.13"
description = "A GPU-accelerate implementation of Nearest Neighbour search via KDTree."
dependencies = [
    "numpy<1.26.0,>=1.24.0",
    "scipy>=1.10.1, <1.16.0",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "isort",
    "pytest~=7.2",
    "ruff",
    "tqdm"
]

[tool.setuptools.packages.find]
include = [
    "gKDTree"
]

[tool.setuptools.package-data]
gKDTree = ["*.so"]

[tool.ruff]
exclude = [
    "*.cpp",
    "*.hpp",
    "3rd_party/*",
    "build/*"
]

[tool.isort]
skip = [
    "3rd_party",
    "build"
]
skip_glob = [
    "**/__pycache__/*"
]
